added a hotkey button

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <form action="/nextTab" method="get">
             <button type="submit">Next Tab</button>
         </form>
+        <form action="/hotkey1" method="get">
+            <button type="submit">Hotkey 1</button>
+        </form>
     </body>
 </html>
