added all 8 hotkeys

--- a/index.html
+++ b/index.html
@@ -17,5 +17,26 @@
         <form action="/hotkey1" method="get">
             <button type="submit">Hotkey 1</button>
         </form>
+        <form action="/hotkey2" method="get">
+            <button type="submit">Hotkey 2</button>
+        </form>
+        <form action="/hotkey3" method="get">
+            <button type="submit">Hotkey 3</button>
+        </form>
+        <form action="/hotkey4" method="get">
+            <button type="submit">Hotkey 4</button>
+        </form>
+        <form action="/hotkey5" method="get">
+            <button type="submit">Hotkey 5</button>
+        </form>
+        <form action="/hotkey6" method="get">
+            <button type="submit">Hotkey 6</button>
+        </form>
+        <form action="/hotkey7" method="get">
+            <button type="submit">Hotkey 7/button>
+        </form>
+        <form action="/hotkey8" method="get">
+            <button type="submit">Hotkey 8</button>
+        </form>
     </body>
 </html>
