--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test</title>
+        <title>Control Hub (test)</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="/Assets/favicon.ico">
     </head>
     <body>
-        <h3>Hello World</h3>
-        <form action="/togglePlayback" method="get">
-            <button type="submit">Toggle Media Playback</button>
-        </form>
-        <form action="/prevTab" method="get">
-            <button type="submit">Previous Tab</button>
-        </form>
-        <form action="/nextTab" method="get">
-            <button type="submit">Next Tab</button>
-        </form>
-        <form action="/hotkey1" method="get">
-            <button type="submit">Hotkey 1</button>
-        </form>
-        <form action="/hotkey2" method="get">
-            <button type="submit">Hotkey 2</button>
-        </form>
-        <form action="/hotkey3" method="get">
-            <button type="submit">Hotkey 3</button>
-        </form>
-        <form action="/hotkey4" method="get">
-            <button type="submit">Hotkey 4</button>
-        </form>
-        <form action="/hotkey5" method="get">
-            <button type="submit">Hotkey 5</button>
-        </form>
-        <form action="/hotkey6" method="get">
-            <button type="submit">Hotkey 6</button>
-        </form>
-        <form action="/hotkey7" method="get">
-            <button type="submit">Hotkey 7/button>
-        </form>
-        <form action="/hotkey8" method="get">
-            <button type="submit">Hotkey 8</button>
-        </form>
+        <div>
+            <h1>Midi Controller Console</h1>
+        </div>
+        <div class="console-container">
+            <form action="/togglePlayback" method="get">
+                <button type="submit">Toggle Media Playback</button>
+            </form>
+            <form action="/prevTab" method="get">
+                <button type="submit">Previous Tab</button>
+            </form>
+            <form action="/nextTab" method="get">
+                <button type="submit">Next Tab</button>
+            </form>
+        </div>
+        <div class="hotkey">
+            <form action="/hotkey1" method="get">
+                <button type="submit">Hotkey 1</button>
+            </form>
+            <form action="/hotkey2" method="get">
+                <button type="submit">Hotkey 2</button>
+            </form>
+            <form action="/hotkey3" method="get">
+                <button type="submit">Hotkey 3</button>
+            </form>
+            <form action="/hotkey4" method="get">
+                <button type="submit">Hotkey 4</button>
+            </form>
+            <form action="/hotkey5" method="get">
+                <button type="submit">Hotkey 5</button>
+            </form>
+            <form action="/hotkey6" method="get">
+                <button type="submit">Hotkey 6</button>
+            </form>
+            <form action="/hotkey7" method="get">
+                <button type="submit">Hotkey 7</button>
+            </form>
+            <form action="/hotkey8" method="get">
+                <button type="submit">Hotkey 8</button>
+            </form>
+        </div>
     </body>
 </html>
